--- a/scss/modules/_footer.scss
+++ b/scss/modules/_footer.scss
@@ -3,11 +3,19 @@
   margin-top: 10px;
   @include font-size(1.3);
   @include clearfix;
+  display: flex;
+  align-items: center;
+}
+
+.contact-button {
+  display: inline-block;
+  border-right: 3px solid white;
+  padding: 7px 15px;
+  height: 100%;
 }
 
 .footer-address {
-  float: left;
-  padding: 7px 15px;
+  padding: 7px 0 0 15px;
   @include font-size(1.2);
   p {
     margin: 0;
@@ -16,14 +24,8 @@
 }
 
 .site-info {
-  text-align: right;
-  float: right;
-  @include font-size(1.2);
-  @media (max-width: 600px ) {
-    width: 75%;
-    text-align: left;
-    float: left;
-  }
+  padding: 0 0 7px 15px;
+  @include font-size(1.1);
 }
 
 .site-info,
@@ -36,18 +38,16 @@
   margin: 0;
 }
 
-.contact-button {
-  display: block;
-  float:left;
-  border-right: 3px solid white;
-  @media (max-width: 600px) {
-    border-bottom: 3px solid white;
+.footer-text {
+  display: flex;
+  flex-direction: column;
+  @media (min-width: 640px) {
+    flex-direction: row;
+    justify-content: space-between;
+    flex: 1;
+    align-items: baseline;
+    > div {
+      padding: 7px 15px;
+    }
   }
-}
-
-
-.site-info,
-.contact-button
- {
-  padding: 7px 15px;
 }
